<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/land_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical|start"
                    android:text="@string/landId1"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/land_order_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical|start"
                    android:text="@string/land_order_date"
                    android:textAllCaps="true"
                    android:textStyle="italic" />


                <TextView
                    android:id="@+id/land_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical|start"
                    android:text="@string/landStatus"
                    android:textAllCaps="true"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/land_owner_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical|start"
                    android:text="@string/landOwnerPhone"
                    android:textAllCaps="true"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/land_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical|start"
                    android:text="@string/landAddress"
                    android:textAllCaps="true"
                    android:textStyle="italic" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button

                android:id="@+id/btnEdit"
                android:text="@string/edit"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button

                android:id="@+id/btnRemove"
                android:text="@string/remove"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button

                android:id="@+id/btnDetail"
                android:text="@string/detail"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <Button

                android:id="@+id/btnDirection"
                android:text="@string/track"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>