<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/order_info"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/land_location_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|start"
                android:text="@string/land_location_name"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/size_of_land"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|start"
                android:text="@string/size_of_land"
                android:textAllCaps="true"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/land_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|start"
                android:text="@string/land_price"
                android:textAllCaps="true"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/land_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical|start"
                android:text="@string/land_title"
                android:textAllCaps="true"
                android:textStyle="italic" />

        </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>