<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtLandId"
            android:hint="@string/landId"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimary"
            android:text=""
            android:textColorHint="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true"

            />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtLandName"
            android:hint="@string/land_location_name"
            android:layout_width="match_parent"
            android:textColor="@color/colorPrimary"
            android:text=""
            android:textColorHint="@color/colorPrimary"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:inputType="text"
            app:met_baseColor="@color/colorPrimary"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@color/colorPrimary"
            app:met_singleLineEllipsis="true"

            />


        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnSelect"
                android:text="@string/select"
                android:textColor="@android:color/white"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:layout_margin="8dp"
                android:background="@color/colorPrimary"
                />

            <Button
                android:id="@+id/btnUpload"
                android:text="@string/upload"
                android:textColor="@android:color/white"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_alignParentBottom="true"
                android:layout_margin="8dp"
                android:background="@color/colorPrimaryDark"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>